# SPRIG

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  api.py  flake.nix  main.py  periodic-ping.sh  pyproject.toml  readme.md  sprig.py  utils.py
.github/workflows/: test.yml
data/: 00001.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/reach/: challenge.rsh  claim.rsh  index.mjs  lib.mjs
frontend/src/: App.vue  index.css  main.js  main.ts  sprig.ts  store.ts
frontend/src/components/: Algo.vue  AttemptEmbed.vue  ButtonPrimary.vue  ButtonSecondary.vue  ClaimDisplay.vue  ClaimEmbed.vue  ClaimMd.vue  HelloWorld.vue  Hint.vue  Home.vue  InstanceEmbed.vue  InstanceMd.vue  LabeledData.vue  NavBar.vue  NewProof.vue  Parameters.vue  Price.vue  ProofAttemptPage.vue  ProofInput.vue  RecursiveClaimList.vue  SearchInput.vue  SimpleStats.vue  SprigInstancesList.vue  SprigSummaryCard.vue  StatusDisplay.vue  StatusIcon.vue  StatusTag.vue  TailwindUIModal.vue  Time.vue  User.vue
frontend/src/components/languages/: index.js  index.ts
frontend/src/components/medium/: Action.vue  AttemptEmbed.vue  ChallengeButton.vue  ChallengeEmbed.vue  ChallengePart.vue  ClaimEmbed.vue  Embed404.vue  InstanceEmbed.vue  NavBar.vue  NewProofButton.vue  NodeEmbed.vue  Parameters.vue  SprigNodeList.vue  TripleGraph.vue  User.vue  UserEmbed.vue  WaitWallectConnect.vue
frontend/src/reach/: index.rsh
frontend/src/router/: index.ts
frontend/src/views/: About.vue  Home.vue  Instance.vue
languages/: __init__.py  base.py  lean.py  tictactoe.py
reach/: challenge.rsh  claim.rsh  index.mjs  lib.mjs
tests/: exemples.py  testComPyJs.mjs  testComPyJs.py  testJs.mjs  test_api.py  test_constants.py  test_fixtures.py  test_serialisation.py  test_sprig.py
(+40 files in other folders)
