[tool.poetry]
name = "sprig"
version = "0.1.0"
description = "A centralised implementation of the SPRIG protocol"
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1.1"
yapf = "^0.32.0"
toml = "^0.10.2"  # needed by yapf, but not installed...

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
strict = true
exclude = ["tests"]


[tool.yapf]
column_limit = 100
continuation_align_style = "space"
coalesce_brackets = true
indent_dictionary_value = true
